Fix TeaVM game scene startup compatibility